[gd_scene load_steps=6 format=3 uid="uid://b87xto3tpscyh"]

[ext_resource type="Script" uid="uid://b7uvb34c56wtj" path="res://Main_screen/Scripts/3d_games.gd" id="1_mxx4x"]
[ext_resource type="Theme" uid="uid://buuhh047e6jrf" path="res://Assets/Background/button_icon.tres" id="2_jcsql"]
[ext_resource type="Texture2D" uid="uid://2ans1js4cogf" path="res://Assets/Background/image.png" id="2_qkk0p"]
[ext_resource type="FontFile" uid="uid://b54m8n1w2ouio" path="res://Assets/Fonts/Bungee-Regular.ttf" id="2_t5h8i"]
[ext_resource type="Theme" uid="uid://dd5ut6ixbb3rj" path="res://Assets/Background/button.tres" id="5_sl8hk"]

[node name="3dGames" type="Node2D"]
script = ExtResource("1_mxx4x")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1148.0
offset_bottom = 657.0
texture = ExtResource("2_qkk0p")
expand_mode = 1

[node name="RandomReach3D" type="Button" parent="."]
offset_left = 188.0
offset_top = 165.0
offset_right = 396.0
offset_bottom = 239.0
theme = ExtResource("2_jcsql")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_t5h8i")
text = "RandomReach3D"

[node name="Exit" type="Button" parent="."]
offset_left = 967.0
offset_top = 542.0
offset_right = 1131.0
offset_bottom = 621.0
theme = ExtResource("5_sl8hk")
theme_override_fonts/font = ExtResource("2_t5h8i")
theme_override_font_sizes/font_size = 20
text = "Exit"

[node name="Jumpify" type="Button" parent="."]
offset_left = 729.0
offset_top = 161.0
offset_right = 930.0
offset_bottom = 233.0
theme = ExtResource("2_jcsql")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_t5h8i")
text = "Jumpify"

[node name="FlyThrough3D" type="Button" parent="."]
offset_left = 460.0
offset_top = 165.0
offset_right = 660.0
offset_bottom = 239.0
theme = ExtResource("2_jcsql")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_t5h8i")
text = "FlyThrough3D"

[node name="Logout" type="Button" parent="."]
offset_left = 6.0
offset_top = 543.0
offset_right = 181.0
offset_bottom = 623.0
theme = ExtResource("5_sl8hk")
theme_override_fonts/font = ExtResource("2_t5h8i")
theme_override_font_sizes/font_size = 20
text = "   ⬅️ Log-out    "

[node name="Assessment" type="Button" parent="."]
offset_left = 337.0
offset_top = 291.0
offset_right = 528.0
offset_bottom = 370.0
theme = ExtResource("2_jcsql")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_t5h8i")
text = "Assessment"

[node name="Results" type="Button" parent="."]
offset_left = 586.0
offset_top = 291.0
offset_right = 773.0
offset_bottom = 368.0
theme = ExtResource("2_jcsql")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_t5h8i")
text = "Results"

[node name="LoggedInAs" type="Label" parent="."]
offset_left = 456.0
offset_top = 48.0
offset_right = 643.0
offset_bottom = 78.0
theme_override_fonts/font = ExtResource("2_t5h8i")
theme_override_font_sizes/font_size = 22
text = "Patient name :"

[node name="TrainingLabel" type="Label" parent="."]
offset_left = 419.0
offset_top = 85.0
offset_right = 658.0
offset_bottom = 122.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_t5h8i")
theme_override_font_sizes/font_size = 22

[node name="2D_mode" type="CheckButton" parent="."]
offset_left = 418.0
offset_top = 471.0
offset_right = 677.0
offset_bottom = 506.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_t5h8i")
theme_override_font_sizes/font_size = 20
text = "Switch to 2D mode"

[node name="HandSelectionPopup" type="Panel" parent="."]
visible = false
offset_left = 392.0
offset_top = 293.0
offset_right = 762.0
offset_bottom = 512.0

[node name="Label" type="Label" parent="HandSelectionPopup"]
layout_mode = 0
offset_left = 66.0
offset_top = 61.0
offset_right = 326.0
offset_bottom = 87.0
text = "Which hand do you want to train?"

[node name="HBoxContainer" type="HBoxContainer" parent="HandSelectionPopup"]
layout_mode = 0
offset_left = 95.0
offset_top = 105.0
offset_right = 299.0
offset_bottom = 145.0
theme_override_constants/separation = 30

[node name="LeftButton" type="Button" parent="HandSelectionPopup/HBoxContainer"]
layout_mode = 2
text = "Left hand"

[node name="RightButton" type="Button" parent="HandSelectionPopup/HBoxContainer"]
layout_mode = 2
text = "Right hand"

[connection signal="pressed" from="RandomReach3D" to="." method="_on_random_reach_3d_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Jumpify" to="." method="_on_jumpify_pressed"]
[connection signal="pressed" from="FlyThrough3D" to="." method="_on_fly_through_3d_pressed"]
[connection signal="pressed" from="Logout" to="." method="_on_logout_pressed"]
[connection signal="pressed" from="Assessment" to="." method="_on_assessment_pressed"]
[connection signal="pressed" from="Results" to="." method="_on_results_pressed"]
[connection signal="toggled" from="2D_mode" to="." method="_on_2d_mode_toggled"]
[connection signal="pressed" from="HandSelectionPopup/HBoxContainer/LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="HandSelectionPopup/HBoxContainer/RightButton" to="." method="_on_right_button_pressed"]
